--- a/index.html
+++ b/index.html
@@ -9,16 +9,25 @@
 </head>
 
 <body>
-        <h1 class="header">
-            tik tak toe
-        </h1>
+    <h1 class="header">
+        tik tak toe
+    </h1>
 
 
-    <div id="canvas">
-        <canvas class="canvas" width="512" height="512"></canvas>
+    <div class="canvas">
+        <canvas id="canvas one" width="128px" height="128px" style="background: whitesmoke;"></canvas>
+        <canvas id="canvas two" width="128px" height="128px" style="background: whitesmoke;"></canvas>
+        <canvas id="canvas thre" width="128px" height="128px" style="background: whitesmoke;"></canvas>
+        <canvas id="canvas four" width="128px" height="128px" style="background: whitesmoke;"></canvas>
+        <canvas id="canvas  five" width="128px" height="128px" style="background: whitesmoke;"></canvas>
+        <canvas id="canvas six" width="128px" height="128px" style="background: whitesmoke;"></canvas>
+        <canvas id="canvas seven" width="128px" height="128px" style="background: whitesmoke;"></canvas>
+        <canvas id="canvas eight" width="128px" height="128px" style="background: whitesmoke;"></canvas>
+        <canvas id="canvas nine" width="128px" height="128px" style="background: whitesmoke;"></canvas>
+
     </div>
-       
-   
+
+
 
 
 </body>
