--- a/index.html
+++ b/index.html
@@ -1,35 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>tik tak toe</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <title>Хрестики-Нулики</title>
 </head>
 
 <body>
-    <h1 class="header">
-        tik tak toe
-    </h1>
-
-
-    <div class="canvas">
-        <canvas id="canvas one" width="128px" height="128px" style="background: whitesmoke;"></canvas>
-        <canvas id="canvas two" width="128px" height="128px" style="background: whitesmoke;"></canvas>
-        <canvas id="canvas thre" width="128px" height="128px" style="background: whitesmoke;"></canvas>
-        <canvas id="canvas four" width="128px" height="128px" style="background: whitesmoke;"></canvas>
-        <canvas id="canvas  five" width="128px" height="128px" style="background: whitesmoke;"></canvas>
-        <canvas id="canvas six" width="128px" height="128px" style="background: whitesmoke;"></canvas>
-        <canvas id="canvas seven" width="128px" height="128px" style="background: whitesmoke;"></canvas>
-        <canvas id="canvas eight" width="128px" height="128px" style="background: whitesmoke;"></canvas>
-        <canvas id="canvas nine" width="128px" height="128px" style="background: whitesmoke;"></canvas>
-
-    </div>
+    <h1 class="header">tik tak toe</h1>
+    <div class="canvas"><canvas id="canvas" width="600" height="600" style="background-color: whitesmoke;"></canvas></div>
 
 
 
 
+
+
+
+
+    <script src="script.js"></script>
 </body>
 
 </html>
