--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <h1 class="header">tik tak toe</h1>
-    <div class="canvas"><canvas id="canvas" width="600" height="600" style="background-color: whitesmoke;"></canvas></div>
+    <div class="canvas"><canvas id="canvas" width="600" height="600" style="background-color: white;"></canvas></div>
 
 
 
